--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vite": "^6.2.5"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "browserslist": "^4.24.4",
     "caniuse-lite": "^1.0.30001712",
     "electron-to-chromium": "^1.5.134",
